[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-cbom"
version = "0.1.0"
description = "Continuity bill of materials and State of Manifest inspector for sealed TIBET envelopes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jasper van de Meent", email = "info@humotica.com"},
    {name = "Codex", email = "codex@humotica.nl"},
]
keywords = [
    "tibet", "cbom", "som", "manifest", "continuity", "tbz",
    "icc", "timeline", "audit", "provenance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
dependencies = []

[project.scripts]
tibet-cbom = "tibet_cbom.cli:main"
tcbom = "tibet_cbom.cli:main"
tibet-som = "tibet_cbom.cli:main"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/tibet_cbom"]
